--- a/index.html
+++ b/index.html
@@ -11,52 +11,24 @@
       <div class="container">
         <h1>Calculator</h1>
 
-        <form id="add">
+        <form id="math">
           <div class="form-group">
-            <label for="add1">1st number:</label>
-            <input id="add1" class="form-control" type="text">
+            <label for="math1">1st number:</label>
+            <input id="math1" class="form-control" type="text">
           </div>
           <div class="form-group">
-            <label for="add2">2nd number:</label>
-            <input id="add2" class="form-control" type="text">
-          </div>
-          <button type="submit" class="btn">ADD!</button>
-        </form>
-
-        <form id="subtract">
-          <div class="form-group">
-            <label for="subtract1">1st number:</label>
-            <input id="subtract1" class="form-control" type="text">
+            <label for="math2">2nd number:</label>
+            <input id="math2" class="form-control" type="text">
           </div>
           <div class="form-group">
-            <label for="subtract2">2nd number:</label>
-            <input id="subtract2" class="form-control" type="text">
-          </div>
-          <button type="submit" class="btn">Subtract!</button>
-        </form>
-
-        <form id="multiply">
-          <div class="form-group">
-            <label for="multiply1">1st number:</label>
-            <input id="multiply1" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="multiply2">2nd number:</label>
-            <input id="multiply2" class="form-control" type="text">
-          </div>
-          <button type="submit" class="btn">MULTIPLY</button>
-        </form>
-
-        <form id="divide">
-          <div class="form-group">
-            <label for="divide1">1st number:</label>
-            <input id="divide1" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="divide2">2nd number:</label>
-            <input id="divide2" class="form-control" type="text">
-          </div>
-          <button type="submit" class="btn">DIVIDE</button>
+            <label for="mathType">Operation Type: </label>
+            <select class="form-control" id="mathType">
+              <option value="add">Add</option>
+              <option value="subtract">Subtract</option>
+              <option value="multiply">Multiply</option>
+              <option value="divide">Divide</option>
+            </select><br>
+          <button type="submit" class="btn">Submit</button>
         </form>
 
 
